[package]
name = "usiem-community-parsers"
version = "0.1.0"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "uSIEM Community Parsers. Library to be used to build a custom SIEM with the framework uSIEM"
repository = "https://github.com/u-siem/community-parsers"
keywords = ["SIEM", "security", "logs"]
categories = ["parsing"]
edition = "2021"

[lib]
name = "usiem_parsers"
path = "src/lib.rs"

[features]
default = ["metrics"]
metrics = []

[dependencies]
u-siem = { version = "0"}
#u-siem = {path = "../u-siem-core"}
serde = { version = "1.0", features = ["derive"] }
phf = { version = "0.11", features = ["macros"] }
